still gotta work more no it

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="layout-container">
+
     <app-sidebar></app-sidebar>
     <div class="content-container">
-      <router-outlet></router-outlet>
+      <router-outlet>
+        <app-header></app-header>
+      </router-outlet>
     </div>
   </div>
-  
