--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,10 +1,82 @@
-<h1>Login page </h1>
-<input name="email" type="email"  [(ngModel)]="email" />
-<h3>password</h3>
-<input name="password" type="password"  [(ngModel)]="password" />
-<p>email={{email}} password : {{password}}</p>
-<button (click)="handleLogin()">Login</button>
-<button (click)="handleLogout()">logout</button>
+<div class="bg-light min-vh-100 d-flex flex-row align-items-center">
+  <div class="container-md">
+    <div class="row justify-content-center">
+      <div class="col-lg-10 col-xl-8">
+        <div class="card-group">
+          <!-- Login Card -->
+          <div class="card p-4">
+            <div class="card-body">
+              <form >
+                <h1>Login</h1>
+                <p class="text-body-secondary">Sign In to your account</p>
+                <div class="input-group mb-3">
+                  <span class="input-group-text">
+                    <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16">
+                      <path d="M8 0a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM4.5 9a4.5 4.5 0 0 1 9 0v2a4.5 4.5 0 0 1-9 0V9z"/>
+                    </svg>
+                  </span>
+                  <input
+                    autocomplete="username"
+                    class="form-control"
+                    placeholder="Username"
+                    [(ngModel)]="email"
+                    name="email"
+                  />
+                </div>
+                <div class="input-group mb-4">
+                  <span class="input-group-text">
+                    <svg class="bi bi-lock" width="1em" height="1em" viewBox="0 0 16 16">
+                      <path d="M3 8V5a5 5 0 1 1 10 0v3h2a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h2zm1-3a3 3 0 0 0 6 0v3H4V5z"/>
+                    </svg>
+                  </span>
+                  <input
+                    autocomplete="current-password"
+                    class="form-control"
+                    placeholder="Password"
+                    type="password"
+                    [(ngModel)]="password"
+                    name="password"
+                  />
+                </div>
+                <div class="row">
+                  <div class="col-6">
+                    <button class="btn btn-warning px-4" type="submit">
+                      Login
+                    </button>
+                  </div>
+                  <div class="col-6 text-end">
+                    <button class="btn btn-link px-0" type="button" routerLink="/forgetpassword">
+                      Forgot password?
+                    </button>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
 
-
-
+          <!-- Sign Up Card -->
+          <div class="card text-white bg-warning py-5" style="min-width: 44%;">
+            <div class="card-body text-center">
+              <div>
+                <h2>Sign up</h2>
+                <p class="mb-2">
+                  Sign Up as a User
+                </p>
+                <button class="btn btn-dark mb-2" routerLink="/register">
+                  Register Now!
+                </button>
+                <h3>or</h3>
+                <p class="mb-2">
+                  Sign Up as a Conductor
+                </p>
+                <button class="btn btn-dark" routerLink="/register-conductor">
+                  Register Now!
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
