--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,11 @@
 <!-- header.component.html -->
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container-fluid">
-    <!-- Sidebar Toggle Button -->
-    <button
-      class="btn btn-outline-primary me-3"
-      type="button"
-      aria-label="Toggle sidebar navigation"
-      data-bs-toggle="collapse"
-      data-bs-target="#sidebarMenu"
-    >
-      <i class="bi bi-list"></i>
-    </button>
+
 
     <!-- App Logo/Brand -->
     <a class="navbar-brand fw-bold text-primary" routerLink="/">
-      <i class="bi bi-app-indicator me-2"></i>AppName
+      <i class="bi bi-app-indicator me-2"></i>ERSII.com
     </a>
 
     <!-- Navigation Links -->
@@ -61,9 +52,8 @@
           <img
             ngSrc="app/assets/avatar.jpeg"
             class="rounded-circle"
-            style="width: 32px; height: 32px;"
+            style="width: 45px; height: 45px;"
             height="236" width="213"/>
-          <span class="ms-2 d-none d-sm-block">{{  'User' }}</span>
         </button>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
           <li><h6 class="dropdown-header">Account</h6></li>
