--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,15 +2,15 @@
     display: flex;
     height: 100vh; /* Make the layout span the full height of the viewport */
   }
-  
+
   app-sidebar {
     width: 250px; /* Set the sidebar width */
     background-color: #f8f9fa; /* Optional: Set a background color for the sidebar */
   }
-  
+
   .content-container {
     flex: 1;
     padding: 16px; /* Optional: Add padding to the main content area */
-    overflow-y: auto; /* Allow scrolling if the content exceeds the viewport height */
+    overflow-y: auto;
+    margin-below: 20px /* Allow scrolling if the content exceeds the viewport height */
   }
-  
