--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="layout-container">
 
-    <app-sidebar></app-sidebar>
+  <app-sidebar *ngIf="isLoggedOut"></app-sidebar>
     <div class="content-container">
       <router-outlet>
-        <app-header></app-header>
+        <app-header *ngIf="isLoggedOut"></app-header>
       </router-outlet>
     </div>
   </div>
