most of the main stuff works now , onto creating functionalities and stuff, also , remember to specify when sidebars should be included in the appcompoenent.ts , added more styling

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <aside class="sidebar">
   <!-- Sidebar Header -->
   <div class="sidebar-header">
-    <h2>ERSII</h2>
+    <h2>ERSII.com</h2>
   </div>
 
   <!-- Main Menu -->
@@ -16,9 +16,9 @@
       </a>
     </li>
     <li class="menu-item">
-      <a routerLink="/overview" routerLinkActive="active">
+      <a routerLink="/services" routerLinkActive="active">
         <span class="material-symbols-outlined">insights</span>
-        <span class="menu-label">Overview</span>
+        <span class="menu-label">Services</span>
 
       </a>
     </li>
