--- a/src/app/components/service-a/service-a.component.html
+++ b/src/app/components/service-a/service-a.component.html
@@ -1,70 +1,118 @@
 <div class="container">
-  <h1>Service Management</h1>
+  <h1 class="title">Service Management</h1>
 
   <!-- Service Form -->
-  <form (ngSubmit)="saveService()">
+  <form class="service-form" (ngSubmit)="saveService()">
     <div class="form-group">
       <label for="name">Name</label>
-      <input type="text" id="name" [(ngModel)]="serviceA.name" name="name" required />
+      <input
+        type="text"
+        id="name"
+        [(ngModel)]="serviceA.name"
+        name="name"
+        class="form-control"
+        required
+        placeholder="Enter service name"
+      />
     </div>
 
     <div class="form-group">
       <label for="description">Description</label>
-      <textarea id="description" [(ngModel)]="serviceA.description" name="description" required></textarea>
+      <textarea
+        id="description"
+        [(ngModel)]="serviceA.description"
+        name="description"
+        class="form-control"
+        rows="4"
+        required
+        placeholder="Enter service description"
+      ></textarea>
     </div>
 
     <div class="form-group">
       <label for="price">Price</label>
-      <input type="number" id="price" [(ngModel)]="serviceA.price" name="price" required />
+      <input
+        type="number"
+        id="price"
+        [(ngModel)]="serviceA.price"
+        name="price"
+        class="form-control"
+        required
+        placeholder="Enter price"
+      />
     </div>
 
     <div class="form-group">
       <label for="capacity">Capacity</label>
-      <input type="number" id="capacity" [(ngModel)]="serviceA.capacity" name="capacity" required />
+      <input
+        type="number"
+        id="capacity"
+        [(ngModel)]="serviceA.capacity"
+        name="capacity"
+        class="form-control"
+        required
+        placeholder="Enter capacity"
+      />
     </div>
 
     <div class="form-group">
       <label for="availability">Availability</label>
       <div class="availability-input">
-        <input type="date" [(ngModel)]="newDate" name="newDate" />
-        <button type="button" (click)="addDate()">Add Date</button>
+        <input
+          type="date"
+          class="form-control"
+          [(ngModel)]="newDate"
+          name="newDate"
+        />
+        <button type="button" class="btn add-date-btn" (click)="addDate()">Add Date</button>
       </div>
-      <ul>
-        <li *ngFor="let date of serviceA.availability; let i = index">
+      <ul class="availability-list">
+        <li *ngFor="let date of serviceA.availability; let i = index" class="availability-item">
           {{ date }}
-          <button type="button" (click)="removeDate(i)">Remove</button>
+          <button type="button" class="remove-btn" (click)="removeDate(i)">Remove</button>
         </li>
       </ul>
     </div>
 
-    <button type="submit" class="btn">{{ isEditMode ? 'Update' : 'Add' }} Service</button>
-    <button type="button" class="btn cancel" (click)="resetForm()" *ngIf="isEditMode">Cancel</button>
+    <div class="form-actions">
+      <button type="submit" class="btn primary-btn">
+        {{ isEditMode ? 'Update' : 'Add' }} Service
+      </button>
+      <button
+        type="button"
+        class="btn cancel-btn"
+        (click)="resetForm()"
+        *ngIf="isEditMode"
+      >
+        Cancel
+      </button>
+    </div>
   </form>
 
   <!-- Service List -->
   <table class="service-table">
     <thead>
-      <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Price</th>
-        <th>Capacity</th>
-        <th>Availability</th>
-        <th>Actions</th>
-      </tr>
+    <tr>
+      <th>Name</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Capacity</th>
+      <th>Availability</th>
+      <th>Actions</th>
+    </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let service of services">
-        <td>{{ service.name }}</td>
-        <td>{{ service.description }}</td>
-        <td>{{ service.price | currency }}</td>
-        <td>{{ service.capacity }}</td>
-        <td>{{ service.availability.join(', ') }}</td>
-        <td class="x">
-          <button  style="margin-right: 10px;" (click)="editService(service)">Edit</button>
-          <button (click)="deleteService(service.id)">Delete</button>
-        </td>
-      </tr>
+    <tr *ngFor="let service of services">
+      <td>{{ service.name }}</td>
+      <td>{{ service.description }}</td>
+      <td>{{ service.price | currency }}</td>
+      <td>{{ service.capacity }}</td>
+      <td>{{ service.availability.join(', ') }}</td>
+      <td>
+        <button class="btn edit-btn" (click)="editService(service)">Edit</button>
+        <button class="btn delete-btn" (click)="deleteService(service.id)">Delete</button>
+      </td>
+    </tr>
     </tbody>
   </table>
 </div>
