--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,6 @@
+<!-- Include Bootstrap Icons in the head of index.html -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
   <div class="container-md">
     <div class="row justify-content-center">
@@ -6,14 +9,12 @@
           <!-- Login Card -->
           <div class="card p-4">
             <div class="card-body">
-              <form >
+              <form>
                 <h1>Login</h1>
                 <p class="text-body-secondary">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <span class="input-group-text">
-                    <svg class="bi bi-person" width="1em" height="1em" viewBox="0 0 16 16">
-                      <path d="M8 0a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM4.5 9a4.5 4.5 0 0 1 9 0v2a4.5 4.5 0 0 1-9 0V9z"/>
-                    </svg>
+                    <i class="bi bi-person"></i> <!-- Using i tag for icon -->
                   </span>
                   <input
                     autocomplete="username"
@@ -25,9 +26,7 @@
                 </div>
                 <div class="input-group mb-4">
                   <span class="input-group-text">
-                    <svg class="bi bi-lock" width="1em" height="1em" viewBox="0 0 16 16">
-                      <path d="M3 8V5a5 5 0 1 1 10 0v3h2a1 1 0 0 1 1 1v6a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1h2zm1-3a3 3 0 0 0 6 0v3H4V5z"/>
-                    </svg>
+                    <i class="bi bi-lock"></i> <!-- Using i tag for icon -->
                   </span>
                   <input
                     autocomplete="current-password"
@@ -40,12 +39,12 @@
                 </div>
                 <div class="row">
                   <div class="col-6">
-                    <button class="btn btn-warning px-4" type="submit">
+                    <button class="btn btn-primary px-4" type="submit">
                       Login
                     </button>
                   </div>
                   <div class="col-6 text-end">
-                    <button class="btn btn-link px-0" type="button" routerLink="/forgetpassword">
+                    <button class="btn btn-link text-primary px-0" type="button" routerLink="/forgetpassword">
                       Forgot password?
                     </button>
                   </div>
@@ -54,8 +53,8 @@
             </div>
           </div>
 
-          <!-- Sign Up Card -->
-          <div class="card text-white bg-warning py-5" style="min-width: 44%;">
+          <!-- Sign Up Card (Lighter Blue Theme) -->
+          <div class="card text-white bg-info py-5" style="min-width: 44%;">
             <div class="card-body text-center">
               <div>
                 <h2>Sign up</h2>
@@ -63,13 +62,6 @@
                   Sign Up as a User
                 </p>
                 <button class="btn btn-dark mb-2" routerLink="/register">
-                  Register Now!
-                </button>
-                <h3>or</h3>
-                <p class="mb-2">
-                  Sign Up as a Conductor
-                </p>
-                <button class="btn btn-dark" routerLink="/register-conductor">
                   Register Now!
                 </button>
               </div>
