--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container-fluid">
 
-
     <!-- App Logo/Brand -->
     <a class="navbar-brand fw-bold text-primary" routerLink="/">
       <i class="bi bi-app-indicator me-2"></i>ERSII.com
@@ -19,24 +18,21 @@
     <div class="d-flex ms-auto align-items-center">
       <!-- Search Bar (Optional) -->
       <form class="d-none d-lg-flex me-4" >
-
       </form>
 
       <!-- Notifications -->
-      <a href="#" class="nav-link position-relative" (click)="showNotifications()">
+      <a  class="nav-link position-relative me-3" (click)="showNotifications()">
         <i class="bi bi-bell"></i>
-        <span  class="badge bg-danger position-absolute top-0 start-100 translate-middle rounded-pill">
-
-        </span>
+        <span class="badge bg-danger position-absolute top-0 start-100 translate-middle rounded-pill"></span>
       </a>
 
       <!-- Tasks -->
-      <a href="#" class="nav-link" (click)="showTasks()">
+      <a class="nav-link me-3" (click)="showTasks()">
         <i class="bi bi-list-task"></i>
       </a>
 
       <!-- Messages -->
-      <a href="#" class="nav-link">
+      <a  class="nav-link me-3">
         <i class="bi bi-envelope"></i>
       </a>
 
