making the user interfaces

--- a/src/app/components/pages/service-search/service-search.component.html
+++ b/src/app/components/pages/service-search/service-search.component.html
@@ -23,7 +23,7 @@
   <div class="services-list">
     <mat-card *ngFor="let service of services">
       <mat-card-title>{{ service.name }}</mat-card-title>
-      <mat-card-subtitle>Cost: {{ service.cost | currency }}</mat-card-subtitle>
+      <mat-card-subtitle>Cost: {{ service.cost }}</mat-card-subtitle>
     </mat-card>
   </div>
 </div>
