--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,11 +2,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
   <div class="container-fluid">
 
-    <!-- App Logo/Brand -->
-    <a class="navbar-brand fw-bold text-primary" routerLink="/">
-      <i class="bi bi-app-indicator me-2"></i>ERSII.com
-    </a>
-
     <!-- Navigation Links -->
     <div class="d-none d-md-flex navbar-nav ms-4">
       <a class="nav-link fw-semibold" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
@@ -49,7 +44,7 @@
             ngSrc="app/assets/avatar.jpeg"
             class="rounded-circle"
             style="width: 45px; height: 45px;"
-            height="236" width="213"/>
+            height="236" width="213" alt="Avatar"/>
         </button>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
           <li><h6 class="dropdown-header">Account</h6></li>
