small refactor and added the business page

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,37 +1,4 @@
-<div class="header-container">
-  <div class="logo">
-    <span class="logo-text">WP</span>
-  </div>
-
-  <div class="nav-links">
-    <a href="/service-search" class="nav-link">Find services</a>
-    <a href="/my-events" class="nav-link">My Events</a>
-  </div>
-
-  <div class="user-profile">
-    <div class="avatar">
-      <img
-        ngSrc="app/assets/avatar.jpeg"
-        class="rounded-circle"
-        style="width: 45px; height: 45px;"
-        height="236" width="213" alt="Avatar"/>
-    </div>
-
-    <div class="user-info">
-      <span class="username">Anonymous</span>
-
-      <div class="auth-links">
-        <a href="/login" class="auth-link">Login</a> |
-        <a href="/register" class="auth-link">Register</a>
-      </div>
-    </div>
-  </div>
-
-</div>
-
-<div class="body-container">
-
-</div>
+<app-header></app-header>
 
 <main class="app-main">
   <section class="intro">
@@ -56,9 +23,4 @@
   </section>
 </main>
 
-<footer class="app-footer">
-  <p>
-    Are you a professional planner, vendor or venue? Start here:
-    <button>Business Portal</button>
-  </p>
-</footer>
+<app-footer></app-footer>
