--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -61,29 +61,6 @@ header.container {
   }
 }
 
-/* Footer Styling */
-.app-footer {
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 16px;
-
-  button {
-    margin-top: 10px;
-    padding: 5px 10px;
-    background: transparent;
-    color: #fff;
-    border: 1px solid #fff;
-    cursor: pointer;
-    transition: all 0.3s;
-
-    &:hover {
-      background: #fff;
-      color: #000;
-    }
-  }
-}
-
 
 /* Container for the entire header */
 .header-container {
@@ -97,15 +74,16 @@ header.container {
 
 /* Logo styling */
 .logo {
-  font-size: 24px;
+  font-size: 34px;
   font-weight: bold;
-  color: #6200ea; /* Purple color */
+  color: #6200ea;
+  margin-left: 20px;
 }
 
 /* Navigation links */
 .nav-links {
   display: flex;
-  gap: 20px;
+  gap: 50px;
 }
 
 .nav-link {
@@ -124,6 +102,7 @@ header.container {
   display: flex;
   align-items: center;
   gap: 10px;
+  margin-right: 50px;
 }
 
 .username {
