most of the main stuff works now , onto creating functionalities and stuff, also , remember to specify when sidebars should be included in the appcompoenent.ts , added more styling

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -30,21 +30,22 @@
     <div class="menu-separator"></div>
     <li class="menu-item">
       <a routerLink="/historique" routerLinkActive="active">
-        <span class="material-symbols-outlined">history</span>
-        <span class="menu-label">Historique</span>
+        <span class="material-symbols-outlined">insights</span>
+        <span class="menu-label">Orders</span>
       </a>
     </li>
     <li class="menu-item">
       <a routerLink="/products" routerLinkActive="active">
-        <span class="material-symbols-outlined">storefront</span>
-        <span class="menu-label">Products</span>
+        <span class="material-symbols-outlined">insights</span>
+        <span class="menu-label">Services</span>
       </a>
     </li>
     <li class="menu-item">
-      <a routerLink="/">
-        <span class="material-symbols-outlined">storefront</span>
-        <span class="menu-label">Login</span>
+      <a routerLink="/Users" routerLinkActive="active">
+        <span class="material-symbols-outlined">insights</span>
+        <span class="menu-label">Users</span>
       </a>
     </li>
+
   </ul>
 </aside>
