added a lot of stuff

--- a/src/app/components/users/users.component.html
+++ b/src/app/components/users/users.component.html
@@ -4,7 +4,7 @@
     <li *ngFor="let order of orders" class="card">
       <div class="card-header">
         <div class="header-content">
-          <h2 class="card-title">Order #{{ order.id }}</h2>
+          <h2 class="card-title">User #{{ order.id }}</h2>
           <span class="badge" [ngClass]="order.badgeClass">{{ order.status }}</span>
         </div>
       </div>
