added a lot of stuff

--- a/src/app/components/order-history/order-history.component.html
+++ b/src/app/components/order-history/order-history.component.html
@@ -1,31 +1,33 @@
 <div class="order-history">
-    <h1 class="title">Order History</h1>
-    <ul class="order-list">
-      <li *ngFor="let order of orders" class="card">
-        <div class="card-header">
-          <div class="header-content">
-            <h2 class="card-title">Order #{{ order.id }}</h2>
-            <span class="badge" [ngClass]="order.badgeClass">{{ order.status }}</span>
-          </div>
+  <h1 class="title">Order History</h1>
+  <ul class="order-list">
+    <li *ngFor="let order of orders" class="card">
+      <div class="card-header">
+        <div class="header-content">
+          <h2 class="card-title">Order #{{ order.id }}</h2>
         </div>
-        <div class="card-content">
-          <div class="content-row">
-            <span class="label">Date:</span>
-            <span>{{ order.date }}</span>
-          </div>
-          <div class="content-row">
-            <span class="label">Items Purchased:</span>
-            <span>{{ order.items }}</span>
-          </div>
-          <div class="content-row">
-            <span class="label">Total Amount:</span>
-            <span>${{ order.total }}</span>
-          </div>
+      </div>
+      <div class="card-content">
+        <div class="content-row">
+          <span class="label">Booking ID:</span>
+          <span>{{ order.bookingId }}</span>
         </div>
-        <div class="card-footer">
-          <a href="#" class="link">View Details</a>
+        <div class="content-row">
+          <span class="label">Service Provider ID:</span>
+          <span>{{ order.serviceProviderId }}</span>
         </div>
-      </li>
-    </ul>
-  </div>
-  
+        <div class="content-row">
+          <span class="label">Service ID:</span>
+          <span>{{ order.serviceId }}</span>
+        </div>
+        <div class="content-row">
+          <span class="label">Total Amount:</span>
+          <span>${{ order.totalAmount }}</span>
+        </div>
+      </div>
+      <div class="card-footer">
+        <a href="#" class="link">View Details</a>
+      </div>
+    </li>
+  </ul>
+</div>
