added users feature

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -46,6 +46,12 @@
         <span class="menu-label">Users</span>
       </a>
     </li>
+    <li class="menu-item">
+      <a routerLink="/user-list" routerLinkActive="active">
+        <span class="material-symbols-outlined">insights</span>
+        <span class="menu-label">user-list</span>
+      </a>
+    </li>
 
   </ul>
 </aside>
