--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="row">
                   <div class="col-6">
-                    <button class="btn btn-primary px-4" type="submit">
+                    <button class="btn btn-primary px-4" type="submit" (click)="handleLogin()">
                       Login
                     </button>
                   </div>
