added client projects page and fixed ports

--- a/src/app/components/Client-pages/business/business.component.html
+++ b/src/app/components/Client-pages/business/business.component.html
@@ -7,7 +7,7 @@
       <h2 class="welcome-title">Join Our Listings of Talented Vendors</h2>
       <p class="welcome-description">
         Take your wedding business to the next level by being a part of our talented vendor community.       </p>
-      <button class="cta-button">Add your business listing</button>
+      <button class="cta-button">Add your Business to Listing</button>
     </div>
   </section>
 
