--- a/src/app/components/Client-pages/componnents/footer/footer.component.html
+++ b/src/app/components/Client-pages/componnents/footer/footer.component.html
@@ -1,6 +1,19 @@
-<footer class="app-footer">
-  <p>
-    Are you a professional planner, vendor or venue? Start here:
-    <button>Business Portal</button>
-  </p>
+<footer>
+  <div class="links">
+    <div>
+      <a href="#">Wedding Planning</a>
+      <a href="#">My Projects</a>
+      <a href="#">Create New Wedding Project</a>
+    </div>
+    <div>
+      <a href="#">Pricing</a>
+      <a href="#">Ideas & Advice</a>
+      <a href="#">Virtual Venue Tours</a>
+    </div>
+  </div>
+  <div class="social-media">
+    <p>Social Media</p>
+    <span>Instagram | Facebook | Twitter | Pinterest</span>
+  </div>
+  <p>© 2024 Automatex Tech Sociedad Limitada</p>
 </footer>
