--- a/src/app/components/Client-pages/componnents/header/header.component.html
+++ b/src/app/components/Client-pages/componnents/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header-container">
   <div class="logo">
-    <a href="/home" class="logo-text nav-link">WP</a>
+    <a href="/home" class="logo-text nav-link">ERSII</a>
   </div>
 
   <div class="nav-links">
