--- a/src/app/components/Client-pages/my-events/my-events.component.html
+++ b/src/app/components/Client-pages/my-events/my-events.component.html
@@ -1,10 +1,31 @@
-<app-sidebar/>
-<div class="content-container">
-  <router-outlet>
-    <app-header/>
-  </router-outlet>
-</div>
-<div class="my-events-container">
-  <h2>My Events</h2>
+<app-header></app-header>
 
+<div class="projects-container">
+  <h2>Wedding Projects</h2>
+  <div *ngIf="loading">Loading events...</div>
+
+  <div *ngIf="!loading && events.length === 0">No events found.</div>
+
+  <div class="projects">
+    <div class="project">
+      <div class="folder">
+        <p>First project</p>
+        <small>Updated on: 06 Dec</small>
+      </div>
+    </div>
+    <div class="create-project">
+      <div class="add-folder">+</div>
+      <p>Create new wedding project</p>
+    </div>
+  </div>
+
+  <div class="projects">
+    <div *ngFor="let event of events" class="event-card">
+      <h3>{{ event.name }}</h3>
+      <p><strong>Date:</strong> {{ event.date | date:'medium' }}</p>
+      <p><strong>Created on:</strong> {{ event.createdDate | date:'medium' }}</p>
+    </div>
+  </div>
 </div>
+
+<app-footer></app-footer>
