--- a/src/app/components/Client-pages/componnents/footer/footer.component.css
+++ b/src/app/components/Client-pages/componnents/footer/footer.component.css
@@ -1,21 +1,12 @@
-.app-footer {
-  background-color: #000;
-  color: #fff;
+footer {
   text-align: center;
-  padding: 16px;
-
-  button {
-    margin-top: 10px;
-    padding: 5px 10px;
-    background: transparent;
-    color: #fff;
-    border: 1px solid #fff;
-    cursor: pointer;
-    transition: all 0.3s;
-
-    &:hover {
-      background: #fff;
-      color: #000;
-    }
-  }
+  padding: 20px;
+  background: #f9f6f9;
+  margin-top: 20px;
+  box-shadow: 0px 0px 4px 4px rgba(0, 0, 0, 0.1);
+}
+.links a {
+  margin: 0 10px;
+  text-decoration: none;
+  color: purple;
 }
