my-events page is done

--- a/src/app/components/Client-pages/event-details/event-details.component.html
+++ b/src/app/components/Client-pages/event-details/event-details.component.html
@@ -1,5 +1,14 @@
-<div class="project-details">
-  <h2>Project Details</h2>
-  <p>Project ID: {{ projectId }}</p>
-  <!-- Add more project details here -->
+<app-header></app-header>
+
+<div class="projects-container">
+
+  <h2>My Services</h2>
+  <div class="project-details">
+    <h2>Project Details</h2>
+    <p>Project ID: {{ projectId }}</p>
+    <!-- Add more project details here -->
+  </div>
+
 </div>
+
+<app-footer></app-footer>
