--- a/src/app/components/Client-pages/my-events/my-events.component.html
+++ b/src/app/components/Client-pages/my-events/my-events.component.html
@@ -14,11 +14,48 @@
       </div>
     </a>
 
-    <div class="create-project">
+    <div class="create-project" (click)="showCreateModal()">
       <div class="add-folder">+</div>
       <p>Create new project</p>
     </div>
   </div>
 </div>
+
+
+<!-- Modal Popup -->
+<div class="modal" *ngIf="showModal">
+  <div class="modal-content">
+    <span class="close" (click)="closeCreateModal()">&times;</span>
+    <h3>Create New Event</h3>
+
+    <!-- Event Form -->
+    <form #eventForm="ngForm" (ngSubmit)="onSubmit(eventForm)">
+      <div class="form-group">
+        <label for="name">Event Name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          ngModel
+          required
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="date">Event Date:</label>
+        <input
+          type="date"
+          id="date"
+          name="date"
+          ngModel
+          required
+        />
+      </div>
+
+      <button type="submit" [disabled]="eventForm.invalid">Create Event</button>
+    </form>
+  </div>
+</div>
+
 
 <app-footer></app-footer>
