changed home page

--- a/src/app/components/Client-pages/home/home.component.html
+++ b/src/app/components/Client-pages/home/home.component.html
@@ -11,15 +11,10 @@
       <button class="cta-button">Create new wedding project</button>
     </div>
 
-    <!-- Illustration Section (Optional) -->
+    <!-- Illustration Section -->
     <div class="illustration-section">
-      <img src="assets/images/illustration.png" alt="Illustration" class="illustration-image"/>
+      <img src="app/assets/images/proj5.png" alt="Illustration" class="illustration-image" />
     </div>
-
-  </section>
-  <section class="illustration">
-    <!-- Replace with a placeholder or illustration -->
-    <div class="placeholder-illustration"></div>
   </section>
 </main>
 
