first CI trigger

--- a/src/app/components/Client-pages/componnents/header/header.component.html
+++ b/src/app/components/Client-pages/componnents/header/header.component.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="nav-links">
-    <a href="/service-search" class="nav-link">Find services</a>
+    <a href="/services-page" class="nav-link">Find services</a>
     <a href="/my-events" class="nav-link">My Events</a>
     <a href="/business" class="nav-link">I'm a Business</a>
   </div>
