--- a/src/app/components/Client-pages/my-events/my-events.component.html
+++ b/src/app/components/Client-pages/my-events/my-events.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 
 <div class="projects-container">
-  <h2>Projects</h2>
+  <h2>Events</h2>
   <div *ngIf="loading">Loading events...</div>
 
   <div *ngIf="!loading && events.length === 0">No events found.</div>
