token and stuff

--- a/src/app/components/Client-pages/componnents/header/header.component.html
+++ b/src/app/components/Client-pages/componnents/header/header.component.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="user-info">
-      <span class="username">Anonymous</span>
+      <span class="username">{{ token?.fullName}}</span>
 
       <div class="auth-links">
         <a href="/login" class="auth-link">Login</a> |
